--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,41 @@
 version: '3.8'
 
 services:
+  # Nginx Reverse Proxy (Entry Point)
+  nginx:
+    image: nginx:alpine
+    container_name: nextqiz-nginx
+    restart: always
+    ports:
+      - "80:80"
+      # - "443:443" # Uncomment if SSL configured
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - frontend
+      - backend
+    networks:
+      - nextqiz-network
+
   # Frontend Application
   frontend:
     build:
       context: .
       dockerfile: Dockerfile
+      args:
+        # Default to localhost for dev if not set
+        NEXT_PUBLIC_SOCKET_SERVER: ${NEXT_PUBLIC_SOCKET_SERVER:-http://localhost:3001}
     container_name: nextqiz-frontend
     restart: always
-    ports:
-      - "3000:3000"
     environment:
-      - NEXT_PUBLIC_SOCKET_SERVER=http://localhost:3001
+      # Runtime env variables
       - MONGODB_URI=mongodb://mongo:27017/nextqiz
-      - JWT_SECRET=your-production-secret-here
+      - JWT_SECRET=${JWT_SECRET:-dev_secret_key}
     depends_on:
       - mongo
       - backend
+    networks:
+      - nextqiz-network
 
   # Socket.IO Backend Cluster
   backend:
@@ -25,8 +44,6 @@ services:
       dockerfile: socket-server/Dockerfile
     container_name: nextqiz-backend
     restart: always
-    ports:
-      - "3001:3001"
     environment:
       - PORT=3001
       - MONGODB_URI=mongodb://mongo:27017/nextqiz
@@ -35,24 +52,31 @@ services:
     depends_on:
       - mongo
       - redis
+    networks:
+      - nextqiz-network
 
   # Database
   mongo:
     image: mongo:6
     container_name: nextqiz-mongo
     restart: always
-    ports:
-      - "27017:27017" # Exposed for local debugging tools
     volumes:
       - mongo-data:/data/db
+    networks:
+      - nextqiz-network
 
   # Redis for Socket Cluster Sync
   redis:
     image: redis:alpine
     container_name: nextqiz-redis
     restart: always
-    ports:
-      - "6379:6379"
+    networks:
+      - nextqiz-network
 
 volumes:
   mongo-data:
+
+
+networks:
+  nextqiz-network:
+    driver: bridge
