--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,14 @@
-version: '3.8'
-
 services:
   # Nginx Reverse Proxy (Entry Point)
   nginx:
-    image: nginx:alpine
+    build:
+      context: ./nginx
+      dockerfile: Dockerfile
     container_name: nextqiz-nginx
     restart: always
     ports:
       - "80:80"
       # - "443:443" # Uncomment if SSL configured
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
       - frontend
       - backend
