--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,8 +27,9 @@ services:
     restart: always
     environment:
       # Runtime env variables
-      - MONGODB_URI=mongodb://mongo:27017/nextqiz
-      - JWT_SECRET=${JWT_SECRET:-dev_secret_key}
+      - NODE_ENV=production
+      - MONGODB_URI=${MONGODB_URI:-mongodb://mongo:27017/nextqiz}
+      - JWT_SECRET=${JWT_SECRET}
     depends_on:
       - mongo
       - backend
@@ -43,8 +44,9 @@ services:
     container_name: nextqiz-backend
     restart: always
     environment:
+      - NODE_ENV=production
       - PORT=3001
-      - MONGODB_URI=mongodb://mongo:27017/nextqiz
+      - MONGODB_URI=${MONGODB_URI:-mongodb://mongo:27017/nextqiz}
       - REDIS_HOST=redis
       - REDIS_PORT=6379
     depends_on:
@@ -68,11 +70,15 @@ services:
     image: redis:alpine
     container_name: nextqiz-redis
     restart: always
+    command: redis-server --appendonly yes
+    volumes:
+      - redis-data:/data
     networks:
       - nextqiz-network
 
 volumes:
   mongo-data:
+  redis-data:
 
 
 networks:
