feat: Update docker-compose.yml with health checks and proper dependency conditions

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,31 +8,39 @@ services:
     restart: always
     ports:
       - "80:80"
-      # - "443:443" # Uncomment if SSL configured
+      # - "443:443" # Uncomment for SSL/HTTPS
     depends_on:
-      - frontend
-      - backend
+      frontend:
+        condition: service_started
+      backend:
+        condition: service_started
     networks:
       - nextqiz-network
+    healthcheck:
+      test: [ "CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost/" ]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
 
-  # Frontend Application
+  # Frontend Application (Next.js)
   frontend:
     build:
       context: .
       dockerfile: Dockerfile
       args:
-        # Default to localhost (via Nginx) for Docker setup
         NEXT_PUBLIC_SOCKET_SERVER: ${NEXT_PUBLIC_SOCKET_SERVER:-http://localhost}
     container_name: nextqiz-frontend
     restart: always
     environment:
-      # Runtime env variables
       - NODE_ENV=production
       - MONGODB_URI=${MONGODB_URI:-mongodb://mongo:27017/nextqiz}
       - JWT_SECRET=${JWT_SECRET}
     depends_on:
-      - mongo
-      - backend
+      mongo:
+        condition: service_started
+      backend:
+        condition: service_started
     networks:
       - nextqiz-network
 
@@ -50,12 +58,14 @@ services:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
     depends_on:
-      - mongo
-      - redis
+      mongo:
+        condition: service_started
+      redis:
+        condition: service_started
     networks:
       - nextqiz-network
 
-  # Database
+  # MongoDB Database
   mongo:
     image: mongo:6
     container_name: nextqiz-mongo
@@ -65,7 +75,7 @@ services:
     networks:
       - nextqiz-network
 
-  # Redis for Socket Cluster Sync
+  # Redis for Socket.IO Cluster Sync
   redis:
     image: redis:alpine
     container_name: nextqiz-redis
@@ -76,11 +86,10 @@ services:
     networks:
       - nextqiz-network
 
-volumes:
-  mongo-data:
-  redis-data:
-
-
 networks:
   nextqiz-network:
     driver: bridge
+
+volumes:
+  mongo-data:
+  redis-data:
