--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,8 @@ services:
       timeout: 10s
       retries: 3
       start_period: 40s
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
 
   # Frontend Application (Next.js)
   frontend:
