--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
       retries: 3
       start_period: 40s
     volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./nginx:/etc/nginx/conf.d:ro
 
   # Frontend Application (Next.js)
