--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,51 +11,12 @@ http {
 
     sendfile on;
     keepalive_timeout 65;
+    client_max_body_size 10M;
 
-    # HTTP (port 80) - certbot challenge + redirect to HTTPS
-    server {
-        listen 80;
-        server_name gautamkaran.in www.gautamkaran.in;
+    # Logging
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
 
-        location /.well-known/acme-challenge/ {
-            root /var/www/certbot;
-        }
-
-        location / {
-            return 301 https://$host$request_uri;
-        }
-    }
-
-    # HTTPS (port 443)
-    server {
-        listen 443 ssl;
-        server_name gautamkaran.in www.gautamkaran.in;
-
-        ssl_certificate /etc/letsencrypt/live/gautamkaran.in/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/gautamkaran.in/privkey.pem;
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers HIGH:!aNULL:!MD5;
-
-        # Frontend (Next.js)
-        location / {
-            proxy_pass http://nextqiz-frontend:3000;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-            proxy_set_header Host $host;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        # Backend APIs
-        location /api/ {
-            proxy_pass http://nextqiz-backend:3001;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-            proxy_set_header Host $host;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-    }
+    # Include all server configurations from conf.d
+    include /etc/nginx/conf.d/*.conf;
 }
